# JOSS_test

./: .gitignore  README.md  potentiostat_controller_v9.py  pyproject.toml  requirements.txt  test_push.txt
examples/example_data/CA/: dummy_cell_CA_experiment_info.txt
examples/example_data/CP/: dummy_cell_CP_experiment_info.txt
examples/example_data/CV/: dummy_cell_CV_experiment_info.txt
examples/example_data/GCD/: dummy_cell_GCD_experiment_info.txt
examples/example_data/LSV/: dummy_cell_LSV_experiment_info.txt
examples/example_data/RT/: dummy_cell_RT_experiment_info.txt
examples/example_data/SD/: dummy_cell_SD_experiment_info.txt
paper/: paper.bib  paper.md
potentiostat_controller/: potentiostat_controller_v1.py
src/potentiostat_controller/: __main__.py  potentiostat_controller_v1.py  potentiostat_controller_v1_pyside6.py
tests/: example_parameters.toml  run_test.py  run_tests.py  test_parameters.toml  test_parameters_populate_fields.py
