[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "potentiostat_controller"
version = "0.1.0"
description = "A Python package to control a potentiostat"
authors = [
    {name = "Alexander Bell"},
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyusb==1.2.1",
    "scipy==1.15.1",
    "numpy==2.2.1",
    "PyQt5==5.15.11",
    "pyqtgraph==0.13.7",
    "matplotlib==3.10.0",
]

[project.optional-dependencies]
test = ["toml"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
potentiostat-controller = "potentiostat_controller.potentiostat_controller_v1:main"
