[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "potentiostat_controller"
version = "0.1.0"
description = "A Python package to control a potentiostat"
authors = [
    {name = "Alexander Bell"},
]
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyusb>=1.2,<2.0",
    "scipy>=1.13,<2.0",
    "numpy>=2.0,<3.0",
    "PySide6>=6.9.0",
    "pyqtgraph>=0.13,<0.15",
    "matplotlib>=3.10,<4.0",
]

[project.optional-dependencies]
tests = ["toml"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
potentiostat-controller = "potentiostat_controller.potentiostat_controller_v1_pyside6:main"
